fix: Fix greeting & farewell captions not being used
Fixes #3250

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -183,8 +183,6 @@
   "error.task_in_process": "<prefix><gold>Task is already running.</gold>",
   "titles.title_entered_plot": "<gold>Plot: <world>;<plot></gold>",
   "titles.title_entered_plot_sub": "<dark_aqua>Owned by <owner></dark_aqua>",
-  "titles.prefix_greeting": "<gold><id></gold><gray>></gray>",
-  "titles.prefix_farewell": "<gold><id></gold><gray>></gray>",
   "core.prefix": "<dark_gray>[</dark_gray><gold>P2</gold><dark_gray>] </dark_gray>",
   "core.enabled": "<prefix><gold><value> is now enabled.</gold>",
   "placeholder.hooked": "<prefix><gold>PlotSquared hooked into MVdWPlaceholderAPI</gold>",
@@ -617,6 +615,8 @@
   "flags.flag_error_title": "Flag value must be in the format </red><grey>\"A title\" \"The subtitle\"</grey><red>.",
   "flags.area_flags": "<prefix><gray>Area flags: </gray><dark_aqua><flags></dark_aqua>",
   "flags.road_flags": "<prefix><gray>Road flags: </gray><dark_aqua><flags></dark_aqua>",
+  "flags.greeting_flag_format": "<prefix><gold>[<world>;<plot_id>]:</gold> <greeting>",
+  "flags.farewell_flag_format": "<prefix><gold>[<world>;<plot_id>]:</gold> <farewell>",
   "commands.description.add": "<gray>Allow a user to build in a plot while the plot owner is online.</gray>",
   "commands.description.alias": "<gray>Set the plot alias.</gray>",
   "commands.description.area": "<gray>Create a new plot area.</gray>",
