--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -53,7 +53,9 @@
   "cluster.cluster_regenerated": "<prefix><dark_aqua>Successfully started cluster regeneration.</dark_aqua>",
   "cluster.cluster_teleporting": "<prefix><dark_aqua>Teleporting...</dark_aqua>",
   "cluster.cluster_info": "<prefix><gold>Current cluster: </gold><gray><id></gray>\n<gold>Name: </gold><gray><name></gray>\n<gold>Owner: </gold><gray><owner></gray>\n<gold>Size: </gold><gray><size></gray>\n<gold>Rights: </gold><gray><rights></gray>",
-  "border.border": "<prefix><gray>You are outside the current map border.</gray>",
+  "border.denied": "<prefix><red>You are outside the current map border.</red>",
+  "border.bypass.exited": "<prefix><red>You have bypassed the current map border area.</red>",
+  "border.bypass.entered": "<prefix><gray>You have re-entered the current map border area.</gray>",
   "worldedit.worldedit_bypass": "<prefix><gray><italic>To bypass your restrictions use </gray><dark_aqua><command></dark_aqua></italic>",
   "worldedit.worldedit_bypassed": "<prefix><gray>Currently bypassing WorldEdit restriction.</gray>",
   "gamemode.gamemode_was_bypassed": "<prefix><gold>You bypassed the gamemode (</gold><gray><gamemode></gray><gold>) <gold>set for </gold><gray><plot>.</gray>",
