[ci skip] style: Restore GlobalFlagContainer's entry list being sorted alphabetically
Mostly helps me when updating the wiki

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -526,15 +526,15 @@
   "flags.flag_category_mixed": "<gray>Mixed Value Flags</gray>",
   "flags.flag_description_entity_cap": "<gray>Set to an integer value to limit the amount of entities on the plot.</gray>",
   "flags.flag_description_explosion": "<gray>Set to `true` to enable explosions in the plot, and `false` to disable them.</gray>",
-  "flags.flag_description_music": "<gray>Set to a music disk ID (item name) to play the music disc inside of the plot.</gray>",
+  "flags.flag_description_music": "<gray>Set to a music disk ID (item name) to play the music disc inside the plot.</gray>",
   "flags.flag_description_flight": "<gray>Set to `true` to enable flight within the plot when in survival or adventure mode</gray>\n<gray>set to `default` to use the gamemode default, and `false` to disable flight entirely.</gray>",
   "flags.flag_description_untrusted": "<gray>Set to `false` to disallow untrusted players from visiting the plot.</gray>",
   "flags.flag_description_deny_exit": "<gray>Set to `true` to disallow players from exiting the plot.</gray>",
   "flags.flag_description_chat": "<gray>Set to `false` to prevent plot chat on the plot.</gray>",
   "flags.flag_description_description": "<gray>Plot description. Supports MiniMessage/Adventure.</gray>",
-  "flags.flag_description_greeting": "<gray>Message sent to players on plot entry. Supports '&' color codes.</gray>",
-  "flags.flag_description_farewell": "<gray>Message sent to players when leaving the plot. Supports '&' color codes.</gray>",
-  "flags.flag_description_weather": "<gray>Specifies the weather conditions inside of the plot.</gray>",
+  "flags.flag_description_greeting": "<gray>Message sent to players on plot entry.</gray>",
+  "flags.flag_description_farewell": "<gray>Message sent to players when leaving the plot.</gray>",
+  "flags.flag_description_weather": "<gray>Specifies the weather conditions inside the plot.</gray>",
   "flags.flag_description_animal_attack": "<gray>Set to `true` to allow animals to be attacked in the plot.</gray>",
   "flags.flag_description_animal_cap": "<gray>Set to an integer value to limit the amount of animals on the plot.</gray>",
   "flags.flag_description_animal_interact": "<gray>Set to `true` to allow animals to be interacted with in the plot.</gray>",
@@ -557,8 +557,8 @@
   "flags.flag_description_ice_form": "<gray>Set to `true` to allow ice to form in the plot.</gray>",
   "flags.flag_description_ice_melt": "<gray>Set to `false` to disable ice melting in the plot.</gray>",
   "flags.flag_description_instabreak": "<gray>Set to `true` to allow blocks to be instantaneously broken in survival mode.</gray>",
-  "flags.flag_description_invincible": "<gray>Set to `true` to prevent players from taking damage inside of the plot.</gray>",
-  "flags.flag_description_item_drop": "<gray>Set to `false` to prevent items from being dropped inside of the plot.</gray>",
+  "flags.flag_description_invincible": "<gray>Set to `true` to prevent players from taking damage inside the plot.</gray>",
+  "flags.flag_description_item_drop": "<gray>Set to `false` to prevent items from being dropped inside the plot.</gray>",
   "flags.flag_description_kelp_grow": "<gray>Set to `false` to prevent kelp from growing in the plot.</gray>",
   "flags.flag_description_liquid_flow": "<gray>Set to `false` to disable liquids from flowing within the plot.</gray>",
   "flags.flag_description_misc_break": "<gray>Set to `true` to allow guests to break miscellaneous items.</gray>",
@@ -603,10 +603,10 @@
   "flags.flag_description_guest_gamemode": "<gray>Determines the guest gamemode in the plot.</gray>",
   "flags.flag_description_blocked_cmds": "<gray>A list of commands that are blocked in the plot.</gray>",
   "flags.flag_description_keep": "<gray>Prevents the plot from expiring. Can be set to: true, false, the number of milliseconds to keep the plot for or a timestamp (3w 2d 5h).</gray>",
-  "flags.flag_description_keep_inventory": "<gray>Prevents players from dropping their items when they die inside of the plot.</gray>",
+  "flags.flag_description_keep_inventory": "<gray>Prevents players from dropping their items when they die inside the plot.</gray>",
   "flags.flag_description_deny_portal_travel": "<gray>Prevents players from travelling across dimensions by using portals.</gray>",
   "flags.flag_description_deny_portals": "<gray>Prevents players from creating portals of any kind.</gray>",
-  "flags.flag_description_lectern_read_book": "<gray>Prevents players taking books from lecterns.</gray>",
+  "flags.flag_description_lectern_read_book": "<gray>Prevent players taking books from lecterns.</gray>",
   "flags.flag_description_prevent_creative_copy": "<gray>Prevents people from copying item NBT data in the plot unless they're added as members.</gray>",
   "flags.flag_description_leaf_decay": "<gray>Set to `false` to prevent leaves from decaying.",
   "flags.flag_error_boolean": "Flag value must be a boolean (true | false).",
