feat: Don't enable presets with prices if economy is disabled

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -460,9 +460,11 @@
   "backups.backup_automatic_failure": "<prefix><red>The automatic backup process failed. Your pending action has been canceled. Reason: </red><gray><reason></gray>",
   "preset.preset_cannot_afford": "<prefix><red>You cannot afford that preset.</red>",
   "preset.preset_invalid": "<prefix><red>Could not generate a pattern from that preset.</red>",
-  "preset.preset_lore_cost": "<prefix><gray>Cost: </gray><gold><cost></gold>",
+  "preset.preset_lore_cost": "<gray>Cost: </gray><gold><cost></gold>",
+  "preset.preset_lore_economy_disabled": "<gray>Cost: </gray><red>Economy is disabled</red>",
   "preset.preset_lore_component": "<gray>Component: </gray><gold><component></gold>",
   "preset.title": "Plot Components",
+  "preset.economy_disabled": "<prefix><red>The component preset '<preset>' has a price set but economy is disabled.</red>",
   "generic.generic_other": "<gray>other</gray>",
   "generic.generic_merged": "<gray>merged</gray>",
   "generic.generic_unowned": "<gray>unowned</gray>",
