--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -617,7 +617,7 @@
   "flags.flag_description_prevent_creative_copy": "<gray>Prevents people from copying item NBT data in the plot unless they're added as members.</gray>",
   "flags.flag_description_leaf_decay": "<gray>Set to `false` to prevent leaves from decaying.",
   "flags.flag_description_projectiles": "<gray>Prevents guests from shooting projectiles on the plot when set to false.</gray>",
-  "flags.flag_description_beacon_effect": "<gray>Allow beacon effects originating from other plots affecting the own plot.</gray>",
+  "flags.flag_description_beacon_effect": "<gray>Prevent cross plot beacon effects.</gray>",
   "flags.flag_error_boolean": "Flag value must be a boolean (true | false).",
   "flags.flag_error_enum": "Must be one of: <list>",
   "flags.flag_error_integer": "Flag value must be a whole positive number.",
