--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -248,11 +248,11 @@
   "condense.skipping": "<prefix><red>Skipping complex plot: </red><gold><plot></gold><red>.</red>",
   "condense.task_stopped": "<prefix><gold>Task already stopped.</gold>",
   "condense.default_eval": "<dark_gray><strikethrough>=== <reset> <gold>DEFAULT EVAL </gold><dark_gray><strikethrough>===</dark_gray>",
-  "condense.minimum_radius": "<gold>Minimum radius: </gold><gray><minimumRadius></gray>",
-  "condense.maximum_moved": "<gold>Maximum moved: </gold><gray><maximumMoves></gray>",
+  "condense.minimum_radius": "<gold>Minimum radius: </gold><gray><minimum_radius></gray>",
+  "condense.maximum_moved": "<gold>Maximum moved: </gold><gray><maximum_moves></gray>",
   "condense.input_eval": "<dark_gray><strikethrough>=== <reset> <gold>INPUT EVAL </gold><dark_gray><strikethrough>===</dark_gray>",
   "condense.input_radius": "<gold>Input radius: </gold><gray><radius></gray>",
-  "condense.estimated_moves": "<gold>Estimated moves: </gold><gray><userMove></gray>",
+  "condense.estimated_moves": "<gold>Estimated moves: </gold><gray><user_move></gray>",
   "condense.eta": "<prefix><gold>Estimated time: No idea, times will drastically change based on the system performance and load.</gold>",
   "condense.radius_measured": "<yellow> - Radius is measured in plot width.</yellow>",
   "database.starting_conversion": "<prefix><gold>Starting...</gold>",
