--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -559,6 +559,7 @@
   "flags.flag_description_drop_protection": "<gray>Set to `true` to prevent dropped items from being picked up by non-members of the plot.</gray>",
   "flags.flag_description_edit_sign": "<gray>Set to `true` to allow editing signs in the plot.</gray>",
   "flags.flag_description_feed": "<gray>Specify an interval in seconds and an optional amount by which the players will be fed (amount is 1 by default).</gray>",
+  "flags.flag_description_fishing": "<gray>Set to `true` to allow guests to use a rod in the plot.</gray>",
   "flags.flag_description_forcefield": "<gray>Set to `true` to enable member forcefield in the plot.</gray>",
   "flags.flag_description_grass_grow": "<gray>Set to `false` to prevent grass from growing within the plot.</gray>",
   "flags.flag_description_hanging_break": "<gray>Set to `true` to allow guests to break hanging objects in the plot.</gray>",
