Adding "windcharge" flag (1.21.1+)

--- a/Core/src/main/resources/lang/messages_en.json
+++ b/Core/src/main/resources/lang/messages_en.json
@@ -629,6 +629,7 @@
   "flags.flag_description_leaf_decay": "<gray>Set to `false` to prevent leaves from decaying.",
   "flags.flag_description_projectiles": "<gray>Prevents guests from shooting projectiles on the plot when set to false.</gray>",
   "flags.flag_description_beacon_effect": "<gray>Enables beacon effects on the plot.</gray>",
+  "flags.flag_description_windcharge": "<gray>Enables Wind-Charge effects on the plot.</gray>",
   "flags.flag_error_boolean": "Flag value must be a boolean (true | false).",
   "flags.flag_error_enum": "Must be one of: <list>",
   "flags.flag_error_integer": "Flag value must be a whole positive number.",
